processor/src/fast/tests/snapshots/miden_processor__fast__tests__all_ops__case_10_65.snap
---
source: processor/src/fast/tests/all_ops.rs
expression: fast_stack_outputs
---
Ok(
    StackOutputs {
        elements: [
            17060849736193631575,
            9437431550433740330,
            4790787753101722654,
            13928475910023407549,
            5681572831771938305,
            17441327217307150836,
            380938787849249752,
            9250343451371816604,
            8085017466841934730,
            12335558491746498352,
            7364384275669594926,
            10438406874817038491,
            0,
            0,
            0,
            0,
        ],
    },
)
