processor/src/fast/tests/snapshots/miden_processor__fast__tests__all_ops__case_11_64.snap
---
source: processor/src/fast/tests/all_ops.rs
expression: fast_stack_outputs
---
Ok(
    StackOutputs {
        elements: [
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            9,
            10,
            0,
            0,
            8,
            0,
            0,
            0,
        ],
    },
)
