processor/src/fast/tests/snapshots/miden_processor__fast__tests__all_ops__case_11_65.snap
---
source: processor/src/fast/tests/all_ops.rs
expression: fast_stack_outputs
---
Ok(
    StackOutputs {
        elements: [
            5586993864370339724,
            1868361575743815124,
            8963108921496263854,
            16436362863946497702,
            11846713062559823253,
            16178497959751826781,
            12669434307665867770,
            1348613851626606283,
            9634176741319834489,
            17634317287326092044,
            407916618999768508,
            13138468015286270637,
            0,
            0,
            0,
            0,
        ],
    },
)
