processor/src/fast/tests/snapshots/miden_processor__fast__tests__all_ops__case_12_05.snap
---
source: processor/src/fast/tests/all_ops.rs
expression: fast_stack_outputs
---
Ok(
    StackOutputs {
        elements: [
            18446744069414584320,
            2,
            3,
            4,
            5,
            6,
            7,
            8,
            9,
            10,
            11,
            0,
            0,
            0,
            0,
            0,
        ],
    },
)
